# densefusion_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
interesting_points/scene10/: large_clamp.npy
src/: densefusion copy_0310.py  densefusion.py  densefusion_gt.py  densefusion_predict_registered_points.py  densefusion_with_superglue.py  make_img_list_for_orbslam2.py  republish_TUM.py  republish_rgbd.py
src/DenseFusion/: augmentations.py  backbone.py  box_utils.py  coco.py  config.py  dataset.py  detection.py  eval_ycb.py  eval_ycb_predict_registered_points.py  functions.py  interpolate.py  network.py  output_utils.py  pspnet.py  yolact.py
src/DenseFusion/datasets/ycb/: dataset.py
src/DenseFusion/datasets/ycb/dataset_config/: train_data_list.txt
